Bug 87632 - [PNV] testdisplay -f causes *ERROR* mismatch in gmch_pfit.lvds_border_bits (expected 32768, found 0)
Summary: [PNV] testdisplay -f causes *ERROR* mismatch in gmch_pfit.lvds_border_bits (...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 89209 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-12-23 08:24 UTC by Jeff Zheng
Modified: 2016-05-02 14:37 UTC (History)
3 users (show)

See Also:
i915 platform: PNV
i915 features: display/Other


Attachments
dmesg (88.66 KB, text/plain)
2014-12-23 08:24 UTC, Jeff Zheng
no flags Details
dmesg (312.62 KB, text/plain)
2016-04-29 06:13 UTC, Sitsofe Wheeler
no flags Details

Description Jeff Zheng 2014-12-23 08:24:20 UTC
Created attachment 111213 [details]
dmesg

==System Environment==
--------------------------
Regression: No.I fail to find a good commit. Tried drm-intel-testing 2014-08-09 commit 0c6aad835dd1b817e87e312da0350e07952ff25e

Non-working platforms: Pineview(test machine: x-pnv1)


==kernel==
--------------------------
3.18.0 commit b2776bf7149bddd1f4161f14f79520f17fc1d71d

==Bug detailed description==
-----------------------------
Running "./testdisplay -f 38.25,800,832,912,1024,600,603,607,624" and exit with "CTRL-C", dmesg shows WARNING:
[  242.655524] WARNING: CPU: 0 PID: 3685 at drivers/gpu/drm/i915/intel_display.c:10968 check_crtc_state+0x9a9/0x9ff [i915]()


==Reproduce steps==
---------------------------- 
1. ./testdisplay -f 38.25,800,832,912,1024,600,603,607,624
2. CTRL-C to exit
3. dmesg |grep WARNING
Comment 1 Ander Conselvan de Oliveira 2015-06-04 13:04:09 UTC
*** Bug 89209 has been marked as a duplicate of this bug. ***
Comment 2 Jani Nikula 2016-01-18 13:05:31 UTC
Please try kernel v4.4.
Comment 3 Sitsofe Wheeler 2016-04-29 06:13:18 UTC
Created attachment 123336 [details]
dmesg

Still here with 4.4:

[  293.438700] [drm:intel_pipe_config_compare [i915]] *ERROR* mismatch in gmch_pfit.lvds_border_bits (expected 0x00008000, found 0x00000000)
[  293.438709] ------------[ cut here ]------------
[  293.438799] WARNING: CPU: 0 PID: 811 at /build/linux-TGcUZh/linux-4.4.0/drivers/gpu/drm/i915/intel_display.c:12810 intel_modeset_check_state+0x6bf/0x910 [i915]()
[  293.438804] pipe state doesn't match!
[  293.438807] Modules linked in: drbg ansi_cprng ctr ccm uvcvideo snd_hda_codec_realtek snd_hda_codec_generic videobuf2_vmalloc snd_hda_intel videobuf2_memops joydev videobuf2_v4l2 snd_hda_codec videobuf2_core snd_hda_core v4l2_common snd_hwdep videodev snd_pcm media snd_seq_midi snd_seq_midi_event psmouse snd_rawmidi input_leds snd_seq serio_raw lpc_ich pata_acpi snd_seq_device snd_timer snd eeepc_laptop soundcore shpchp sparse_keymap fjes mac_hid parport_pc ppdev lp parport uas usb_storage autofs4 zram lz4_compress i915 ath5k mac80211 i2c_algo_bit drm_kms_helper syscopyarea ath sysfillrect cfg80211 sysimgblt fb_sys_fops drm ahci libahci video
[  293.438907] CPU: 0 PID: 811 Comm: Xorg Tainted: G        W       4.4.0-21-generic #37-Ubuntu

Dmesg attached.
Comment 4 Sitsofe Wheeler 2016-04-29 06:14:24 UTC
Setting back to NEW.
Comment 5 Sitsofe Wheeler 2016-04-29 07:34:59 UTC
Problem still occurs with 4.6.0-994-generic from http://kernel.ubuntu.com/~kernel-ppa/mainline/drm-intel-next/2016-04-26-wily/ .
Comment 6 Sitsofe Wheeler 2016-04-29 07:36:48 UTC
Apologies the link in the last comment was wrong - the kernel was from http://kernel.ubuntu.com/~kernel-ppa/mainline/drm-intel-nightly/2016-04-29-wily/ .
Comment 7 Jani Nikula 2016-04-29 09:42:01 UTC
Please try this patch and report back:
http://patchwork.freedesktop.org/patch/msgid/1461922595-11161-1-git-send-email-jani.nikula@intel.com
Comment 9 Sitsofe Wheeler 2016-04-29 22:14:07 UTC
Those patches seem to resolve the problem.

Tested-by: Sitsofe Wheeler <sitsofe@yahoo.com>
Comment 10 Jani Nikula 2016-05-02 07:53:55 UTC
(In reply to Sitsofe Wheeler from comment #9)
> Those patches seem to resolve the problem.
> 
> Tested-by: Sitsofe Wheeler <sitsofe@yahoo.com>

Thanks for testing. Pushed the first one to drm-intel-next-queued as

commit a0cbe6a3f1c0e86342965430b4a775b5d35b416b
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Fri Apr 29 15:34:02 2016 +0300

    drm/i915/lvds: separate border enable readout from panel fitter

The second patch should not be needed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.