drm/i915/lvds: do not set border bits when panel fitter is not enabled

We also don't read the border bits in i9xx_get_pfit_config() when the
panel fitter is not enabled, causing the state checker warning:

[drm:intel_pipe_config_compare [i915]] *ERROR* mismatch in
gmch_pfit.lvds_border_bits (expected 0x00008000, found 0x00000000)

Cc: Ville Syrjälä <ville.syrjala@linux.intel.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=87632
Signed-off-by: Jani Nikula <jani.nikula@intel.com>